--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,6 +31,7 @@ subjects:
 - !lcc 'DS'
 - !lcsh 'Jerusalem -- Antiquities'
 - !lcsh 'Jerusalem -- Description and travel'
+- GITenberg
 title: "Jerusalem Explored, Volume 2—Plates\r\nBeing a Description of the Ancient\
   \ and Modern City, with Numerous Illustrations Consisting of Views, Ground Plans\
   \ and Sections"
